# KIGM-Discord-Bot

./: .gitignore  README.md  keep_alive.py  main.py  prefixes.json  pyproject.toml  requirements.txt  rules.txt  the_universe.py
.github/workflows/: codeql-analysis.yml
cogs/: cog_events.py  cog_fun.py  cog_help.py  cog_info.py  cog_mod.py
cogs/comms/: cog_eco.py  cog_fun.py  cog_givea.py  cog_help.py  cog_info.py  cog_mod.py  cog_random.py  cog_settings.py  cog_slash.py  cog_sm.py
cogs/other/: cog_events.py  cog_hyperfunctions.py  cog_tests.py  hyperfunctions.py  topgg.py
cogs/utils/: formats.py  time.py
core/: __init__.py  checks.py  context.py  help_cmd.py  kigmbot.py
core/models/: __init__.py
databases/Economy/: economy.json
databases/Other/: APIS.json  BotLists.json
databases/Settings/: prefixes.json
utils/: __init__.py  mongo.py  paginate.py
