[tool.poetry]
name = "repl_python3_Bot"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.8"
flask = "^1.1.2"
utils = "^1.0.1"
loremipsum = "^1.0.5"
termcolor = "^1.1.0"
discord-interactive = "^4.0"
dblpy = "^0.4.0"
replit = "^2.0.0"
pymongo = "^3.11.1"
dnspython = "^2.0.0"
motor = "^2.3.0"
buttons = "^0.1.9"
dpymenus = "^1.2.2"
"discord.py" = "^1.5.1"
asyncpraw = "^7.1.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
